2019-10-11  Marek Polacek  <polacek@redhat.com>

	PR c++/92049 - extra error with -fchecking=2.
	* g++.dg/template/builtin2.C: New test.

2019-10-11  Jim Wilson  <jimw@sifive.com>

	PR rtl-optimization/91860
	* gcc.dg/pr91860-1.c: New testcase.
	* gcc.dg/pr91860-2.c: New testcase.
	* gcc.dg/pr91860-3.c: New testcase.
	* gcc.dg/pr91860-4.c: New testcase.

2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/91649
	* gfortran.dg/pr91649.f90: New test.

2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/91715
	* gfortran.dg/function_kinds_5.f90: Prune run-on error.
	* gfortran.dg/pr85543.f90: Ditto.
	* gfortran.dg/pr91715.f90: New test.

2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/92018
	* gfortran.dg/gnu_logical_2.f90: Update dg-error regex.
	* gfortran.dg/pr81509_2.f90: Ditto.
	* gfortran.dg/pr92018.f90: New test.

2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/92019
	* gfortran.dg/pr92019.f90: New test.

2019-10-11  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/dfp/c11-keywords-1.c, gcc.dg/dfp/c11-keywords-2.c,
	gcc.dg/dfp/c2x-keywords-1.c, gcc.dg/dfp/c2x-keywords-2.c: New
	tests.
	* gcc.dg/dfp/keywords-ignored-c99.c: Remove test.
	* gcc.dg/dfp/constants-c99.c, gcc.dg/dfp/keywords-c89.c,
	gcc.dg/dfp/keywords-c99.c: Use -pedantic-errors.

2019-10-11  Tobias Burnus  <tobias@codesourcery.com>

	PR fortran/92050
	* gfortran.dg/pr92050.f90: New.

2019-10-11  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/90883
	PR tree-optimization/91091
	* gcc.dg/torture/20191011-1.c: New testcase.
	* gcc.dg/tree-ssa/ssa-fre-82.c: Likewise.
	* gcc.dg/tree-ssa/ssa-fre-83.c: Likewise.
	* gcc.dg/tree-ssa/redundant-assign-zero-1.c: Disable FRE.
	* gcc.dg/tree-ssa/redundant-assign-zero-2.c: Likewise.

2019-10-11  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/size_clause4.ads: New test.

2019-10-11  Ilya Leoshkevich  <iii@linux.ibm.com>

	PR target/77918
	* gcc.target/s390/s390.exp: Enable Fortran tests.